[package]
name = "chomsky-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
clap = { version = "4.5.16", features = ["derive"] }
rayon = "1.10.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

[profile.release]
lto = true
codegen-units = 1
