[package]
name = "chomsky-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
aho-corasick = "1.1.3"
clap = { version = "4.5.17", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[profile.release]
lto = true
codegen-units = 1
